Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • A amd
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 1,476
    • Issues 1,476
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 0
    • Merge requests 0
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • drm
  • amd
  • Issues
  • #1337
Closed
Open
Issue created Oct 17, 2020 by Arthur Borsboom@ArthurBorsboom

Screen brightness not restored on boot: call trace in dc_link_set_backlight_level

Brief summary of the problem

  • Screen brightness is not restored on boot
  • Screen brightness is not restored on resume
  • Call trace at boot found in dmesg triggered by systemd-backlight

Hardware description:

  • CPU: AMD Ryzen 7 4800H
  • GPU: Integrated AMD Vega 7 & discrete AMD Navi 14 Radeon RX 5500M
  • System Memory: 2x 8GB DDR4-3200
  • Display(s): 1920x1080 @ 144Hz
  • Type of Display Connection: eDP
  • Laptop model: MSI Bravo 17 - A4DDR-035NL

System information:

  • Distro name and Version: Arch Linux
  • Kernel version: 5.9.1
  • Using Plymouth

How to reproduce the issue:

  • Boot system
  • Login
  • Open terminal
  • dmesg

Note

  • The call trace on boot can be prevented by disabling the systemd call with systemd.restore_state=0

Attached files:

dmesg-5.9.1.txt

Trace

[   18.944021] ------------[ cut here ]------------
[   18.944208] WARNING: CPU: 12 PID: 1483 at drivers/gpu/drm/amd/amdgpu/../display/dc/core/dc_link.c:2548 dc_link_set_backlight_level+0x8a/0xf0 [amdgpu]
[   18.944209] Modules linked in: cmac ipt_REJECT algif_hash nf_reject_ipv4 algif_skcipher xt_tcpudp af_alg xt_conntrack bnep nf_conntrack nf_defrag_ipv6 nf_defrag_ipv4 libcrc32c iptable_filter uvcvideo btusb btrtl btbcm videobuf2_vmalloc btintel videobuf2_memops videobuf2_v4l2 bluetooth videobuf2_common videodev ecdh_generic mc ecc joydev mousedev amdgpu iwlmvm hid_multitouch hid_generic mac80211 libarc4 gpu_sched msi_wmi i2c_algo_bit sparse_keymap ttm snd_hda_codec_realtek iwlwifi snd_hda_codec_generic edac_mce_amd ledtrig_audio drm_kms_helper kvm_amd snd_hda_codec_hdmi snd_hda_intel kvm snd_intel_dspcfg cfg80211 snd_hda_codec r8169 cec snd_hda_core snd_hwdep snd_pcm realtek rc_core snd_timer mdio_devres irqbypass snd of_mdio syscopyarea sp5100_tco sysfillrect fixed_phy snd_rn_pci_acp3x sysimgblt psmouse rapl input_leds pcspkr k10temp i2c_piix4 fb_sys_fops snd_pci_acp3x soundcore libphy rfkill battery wmi ac tpm_crb i2c_hid tpm_tis pinctrl_amd hid tpm_tis_core evdev mac_hid acpi_cpufreq
[   18.944280]  soc_button_array nls_iso8859_1 nls_cp437 vfat fat vboxnetflt(OE) vboxnetadp(OE) vboxdrv(OE) drm sg crypto_user agpgart ip_tables x_tables ext4 crc32c_generic crc16 mbcache jbd2 dm_crypt cbc encrypted_keys trusted tpm serio_raw atkbd libps2 dm_mod crct10dif_pclmul crc32_pclmul crc32c_intel ghash_clmulni_intel aesni_intel crypto_simd cryptd glue_helper xhci_pci xhci_pci_renesas ccp xhci_hcd rng_core i8042 serio
[   18.944319] CPU: 12 PID: 1483 Comm: systemd-backlig Tainted: G           OE     5.9.1-arch1-1 #1
[   18.944321] Hardware name: Micro-Star International Co., Ltd. Bravo 17 A4DDR/MS-17FK, BIOS E17FKAMS.116 07/10/2020
[   18.944489] RIP: 0010:dc_link_set_backlight_level+0x8a/0xf0 [amdgpu]
[   18.944545] Code: 70 03 00 00 31 c0 48 8d 96 c0 01 00 00 48 8b 0a 48 85 c9 74 06 48 3b 59 08 74 20 83 c0 01 48 81 c2 d8 04 00 00 83 f8 06 75 e3 <0f> 0b 45 31 e4 5b 44 89 e0 5d 41 5c 41 5d 41 5e c3 48 98 48 69 c0
[   18.944547] RSP: 0018:ffffa6d240c33df0 EFLAGS: 00010246
[   18.944550] RAX: 0000000000000006 RBX: ffffa208909f3400 RCX: 0000000000000000
[   18.944554] RDX: ffffa20890a01ed0 RSI: ffffa20890a00000 RDI: 0000000000000000
[   18.944555] RBP: ffffa20890950000 R08: 00000000000000f9 R09: 000000000000000a
[   18.944557] R10: 000000000000000a R11: f000000000000000 R12: 000000000000fa01
[   18.944558] R13: 0000000000000000 R14: 000000000000fa42 R15: ffffa208902ffb20
[   18.944561] FS:  00007f25ca0d5000(0000) GS:ffffa208df900000(0000) knlGS:0000000000000000
[   18.944563] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
[   18.944565] CR2: 0000556e058e8eb8 CR3: 00000003cb646000 CR4: 0000000000350ee0
[   18.944566] Call Trace:
[   18.944754]  amdgpu_dm_backlight_update_status+0xb4/0xc0 [amdgpu]
[   18.944767]  backlight_device_set_brightness+0x7e/0x130
[   18.944773]  brightness_store+0x63/0x80
[   18.944778]  kernfs_fop_write+0xce/0x1b0
[   18.944784]  vfs_write+0xc7/0x210
[   18.944788]  ksys_write+0x67/0xe0
[   18.944794]  do_syscall_64+0x33/0x40
[   18.944800]  entry_SYSCALL_64_after_hwframe+0x44/0xa9
[   18.944804] RIP: 0033:0x7f25caec5f67
[   18.944807] Code: 0d 00 f7 d8 64 89 02 48 c7 c0 ff ff ff ff eb b7 0f 1f 00 f3 0f 1e fa 64 8b 04 25 18 00 00 00 85 c0 75 10 b8 01 00 00 00 0f 05 <48> 3d 00 f0 ff ff 77 51 c3 48 83 ec 28 48 89 54 24 18 48 89 74 24
[   18.944809] RSP: 002b:00007ffe65358258 EFLAGS: 00000246 ORIG_RAX: 0000000000000001
[   18.944812] RAX: ffffffffffffffda RBX: 0000000000000004 RCX: 00007f25caec5f67
[   18.944813] RDX: 0000000000000004 RSI: 00007ffe65358340 RDI: 0000000000000004
[   18.944814] RBP: 00007ffe65358340 R08: 0000000000000000 R09: 0000000000000000
[   18.944816] R10: 0000000000000000 R11: 0000000000000246 R12: 0000000000000004
[   18.944817] R13: 0000556e058d23c0 R14: 0000000000000004 R15: 00007f25caf98720
[   18.944823] ---[ end trace 19b6c631bae1a8a6 ]---
Edited Nov 01, 2020 by Arthur Borsboom
Assignee
Assign to
Time tracking